show pictures tied to location when clicked on fixed and layout changes so sidebar is scrollable when overflow

--- a/app/ui/static/css/map.css
+++ b/app/ui/static/css/map.css
@@ -8,14 +8,18 @@ body {
     background-color: mediumaquamarine;
 }
 
+.sidebar-image {
+    width: 100%;
+}
+
 #content {
    height: 100%;
-   display: flex;
-   flex-direction: column;
 }
 
 #map {
-    flex: 1;
+    position: relative;
+    margin-left: 300px;
+    height: 100%;
 }
 
 #top-bar {
@@ -25,14 +29,16 @@ body {
 }
 
 #sidebar {
-    background-color: rebeccapurple;
+    position: fixed;
     width: 300px;
+    overflow-y: scroll;
+    top: 50px;
+    bottom: 0;
 }
 
 
 #container {
-    display: flex;
-    flex: 1;
+    height: calc(100% - 50px);
 }
 
 
